--- a/src/components/movies-list/movies-list.scss
+++ b/src/components/movies-list/movies-list.scss
@@ -33,7 +33,7 @@
 
 @media (min-width: 320px) and (orientation: landscape) {
   .search-results {
-    top: 165px;
+    top: 130px;
     @include row-direction;
 
     .list {
